# BIDS-Eye

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose-dev.yml  docker-compose-hetzner.yml  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  script.py  sql_expander.py  value_mappings.py
LLM_preprocessor/: llm_client.py  preprocess.py
RAG/: RAG_postprocess.py  audit_collisions.py  audit_yaml.py  bids_to_ca_map.json  build_name_index.py  cognitive_atlas_constructs.yaml  collision_report.txt  embed_FremyCompany_BioLORD_2023_C_34cf469103c3.json  expand_synonyms.py  expand_synonyms_proposals_test.yaml  fix_collisions.py  fold_general_leaves.py  general_leaves_merge_plan.md  general_leaves_to_merge.txt  generate_knowledge_graph.py  join_paths.yaml  join_registry.py  knowledge_graph.html  llamaindex_extraction.py  merge_proposals.py  migrate_to_skos.py  name_index.json  proposals_batch1.yaml  proposals_batch1_cont.yaml  proposals_batch2.yaml  proposals_batch2_remainder.yaml  proposals_batch3.yaml  proposals_batch4.yaml  proposals_batch5.yaml  proposals_batch6.yaml  proposals_batch7.yaml  proposed_task_mappings.json  retriever.py  run_all_batches.sh  run_query_eval.py  value_mappings.yaml  value_mappings_tree_backup.yaml  yaml_to_llamaindex.py
Text-To-SQL/: placeholder.py
backend/: Dockerfile  constants.py  deps.py  few_shot_examples.json  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: auth.py  crawler.py  query.py
backend/services/: query_cache.py  sql_rewriter.py  text_to_sql.py
backend/tests/: conftest.py  test_query_flow.py  test_sql_rewriter.py
benchmarks/: eval_pipeline.py  eval_rag.py
crawlers/: migrate_add_dataset_fields.sql  migrate_add_description_text.sql  migrate_add_institutions.sql  scan_crawl_errors.py
crawlers/openneuro-crawler/: Dockerfile  README.md  accessions.yaml  crawl_job.sh  crawler_service.py  fetch_accessions.py  pyproject.toml
crawlers/openneuro-crawler-backup/: pyproject.toml
crawlers/openneuro-crawler-backup/remote/: datalad.py  openneuro.py
crawlers/openneuro-crawler/remote/: __init__.py  graphql.py  openneuro.py
(+397 files in other folders)
