[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bids-eye-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Install bids-sql first: pip install -e ../BIDS-SQL
    "bids-sql",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    # Text-to-SQL pipeline (Gemini + RAG)
    "google-genai>=0.8.0",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0",
    "modal>=0.67",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
# Biomedical embedding fallback in RAG/retriever.py (BioLORD-2023-C + SapBERT)
# Install with: pip install -e ".[embeddings]"
embeddings = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["."]
