[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openneuro-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["remote*"]
