[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openneuro-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # bids-sql must be installed separately first:
    #   pip install -e ../../BIDS-SQL
    "bids-sql",
    "boto3>=1.34",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["remote*"]
